feat: implement segments search
