# routes/subtitles/segments/segments.py
@@ -9,8 +9,7 @@ from decorators.input_validator import input_validator
 from decorators.input_validator.input_source import RequestArgs, RequestViewArgs
 from decorators.security.auth_token import validate_token
 from decorators.security.user_subtitle import validate_user_subtitle
-from validation.subtitles import subtitle_id_validator, subtitle_file_type_validator
-from validation.pagination import pagination_validator
+from validation.subtitles import subtitle_id_validator, subtitle_file_type_validator, fetch_segments_validator
 from swagger import get_swagger_doc_path
 
 
@@ -23,12 +22,21 @@ segments_service = SegmentsService()
 @segments_blueprint.get("/")
 @validate_token()
 @input_validator(input_source=RequestViewArgs(), validator=subtitle_id_validator)
-@input_validator(input_source=RequestArgs(), validator=pagination_validator)
+@input_validator(input_source=RequestArgs(), validator=fetch_segments_validator)
 @validate_user_subtitle(get_user_id=lambda: g.user["id"], get_subtitle_id=lambda: request.view_args["subtitle_id"])
 def fetch_segments(subtitle_id):
     page = request.args.get("page", None)
     items_per_page = request.args.get("items_per_page", None)
-    segments_data = segments_service.fetch_segments(subtitle_id, page=page, items_per_page=items_per_page)
+    segment_search = request.args.get("segment_search", "")
+
+    segments_data = segments_service.fetch_segments(
+        subtitle_id,
+        {
+            "page": page,
+            "items_per_page": items_per_page,
+            "segment_search": segment_search,
+        },
+    )
     return Response(ResponseMessage.SUCCESSFUL_SEGMENTS_FETCHING, segments_data)
 
 
